python/testData/quickFixes/PyAddImportQuickFixTest/allVariantsSuggestedWhenExistingNonProjectImportFits/main.py
from datetime import datetime


print(datetime)
<error descr="Unresolved reference 'time'">ti<caret>me</error>.time()